k8-manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fastapi-service
  namespace: default
  labels:
    app: fastapi-app
spec:
  type: ClusterIP
  selector:
    app: fastapi-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
    name: http
